visitor/src/main/java/com/visitor/ProgramGrammarParser.java
package com.visitor;
// Generated from ProgramGrammar.g4 by ANTLR 4.13.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ProgramGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NOT=1, COMMA=2, SEMI=3, LPAREN=4, RPAREN=5, LCURLY=6, RCURLY=7, DOT=8, 
		IF=9, ELSE=10, GREATER=11, LESS=12, GREATEREQ=13, LESSEQ=14, EQQ=15, NOTEQ=16, 
		AND=17, OR=18, PLUS=19, MINUS=20, TIMES=21, DIV=22, MOD=23, POW=24, EQ=25, 
		TRUE=26, FALSE=27, QUOTES=28, WRITEKEY=29, WHILEKEY=30, INT=31, FLOAT=32, 
		ID=33, STRING=34, WS=35;
	public static final int
		RULE_program = 0, RULE_stringStatement = 1, RULE_string = 2, RULE_stringOperation = 3, 
		RULE_asignStatement = 4, RULE_asign = 5, RULE_inputWriteStatement = 6, 
		RULE_inputWrite = 7, RULE_write = 8, RULE_statement = 9, RULE_mientras = 10, 
		RULE_floatStatement = 11, RULE_decimal = 12, RULE_operationStatement = 13, 
		RULE_operation = 14, RULE_boolStatement = 15, RULE_bool = 16, RULE_condition = 17, 
		RULE_infixExpr = 18, RULE_additiveExpr = 19, RULE_multiplicativeExpr = 20, 
		RULE_primary = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stringStatement", "string", "stringOperation", "asignStatement", 
			"asign", "inputWriteStatement", "inputWrite", "write", "statement", "mientras", 
			"floatStatement", "decimal", "operationStatement", "operation", "boolStatement", 
			"bool", "condition", "infixExpr", "additiveExpr", "multiplicativeExpr", 
			"primary"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'not'", "','", "';'", "'('", "')'", "'{'", "'}'", "'.'", "'si'", 
			"'sino'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'&&'", "'||'", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'='", "'true'", "'false'", 
			"'\"'", "'escribe'", "'mientras'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NOT", "COMMA", "SEMI", "LPAREN", "RPAREN", "LCURLY", "RCURLY", 
			"DOT", "IF", "ELSE", "GREATER", "LESS", "GREATEREQ", "LESSEQ", "EQQ", 
			"NOTEQ", "AND", "OR", "PLUS", "MINUS", "TIMES", "DIV", "MOD", "POW", 
			"EQ", "TRUE", "FALSE", "QUOTES", "WRITEKEY", "WHILEKEY", "INT", "FLOAT", 
			"ID", "STRING", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ProgramGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProgramGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramGrammarVisitor ) return ((ProgramGrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 10200547856L) != 0)) {
				{
				{
				setState(44);
				statement();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringStatementContext extends ParserRuleContext {
		public List<TerminalNode> QUOTES() { return getTokens(ProgramGrammarParser.QUOTES); }
		public TerminalNode QUOTES(int i) {
			return getToken(ProgramGrammarParser.QUOTES, i);
		}
		public TerminalNode ID() { return getToken(ProgramGrammarParser.ID, 0); }
		public TerminalNode STRING() { return getToken(ProgramGrammarParser.STRING, 0); }
		public StringStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).enterStringStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).exitStringStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramGrammarVisitor ) return ((ProgramGrammarVisitor<? extends T>)visitor).visitStringStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringStatementContext stringStatement() throws RecognitionException {
		StringStatementContext _localctx = new StringStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stringStatement);
		try {
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUOTES:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(50);
				match(QUOTES);
				setState(51);
				match(ID);
				setState(52);
				match(QUOTES);
				}
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(53);
				match(ID);
				}
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(54);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringContext extends ParserRuleContext {
		public StringStatementContext stringStatement() {
			return getRuleContext(StringStatementContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(ProgramGrammarParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ProgramGrammarParser.RPAREN, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).exitString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramGrammarVisitor ) return ((ProgramGrammarVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_string);
		try {
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUOTES:
			case ID:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				stringStatement();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				match(LPAREN);
				setState(59);
				stringStatement();
				setState(60);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringOperationContext extends ParserRuleContext {
		public List<StringContext> string() {
			return getRuleContexts(StringContext.class);
		}
		public StringContext string(int i) {
			return getRuleContext(StringContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(ProgramGrammarParser.PLUS, 0); }
		public TerminalNode LPAREN() { return getToken(ProgramGrammarParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ProgramGrammarParser.RPAREN, 0); }
		public StringOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).enterStringOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).exitStringOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramGrammarVisitor ) return ((ProgramGrammarVisitor<? extends T>)visitor).visitStringOperation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringOperationContext stringOperation() throws RecognitionException {
		StringOperationContext _localctx = new StringOperationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stringOperation);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(64);
				string();
				setState(65);
				match(PLUS);
				setState(66);
				string();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				match(LPAREN);
				setState(69);
				string();
				setState(70);
				match(PLUS);
				setState(71);
				string();
				setState(72);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignStatementContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ProgramGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ProgramGrammarParser.ID, i);
		}
		public TerminalNode EQ() { return getToken(ProgramGrammarParser.EQ, 0); }
		public TerminalNode SEMI() { return getToken(ProgramGrammarParser.SEMI, 0); }
		public DecimalContext decimal() {
			return getRuleContext(DecimalContext.class,0);
		}
		public TerminalNode INT() { return getToken(ProgramGrammarParser.INT, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public StringOperationContext stringOperation() {
			return getRuleContext(StringOperationContext.class,0);
		}
		public InfixExprContext infixExpr() {
			return getRuleContext(InfixExprContext.class,0);
		}
		public AsignStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).enterAsignStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).exitAsignStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramGrammarVisitor ) return ((ProgramGrammarVisitor<? extends T>)visitor).visitAsignStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignStatementContext asignStatement() throws RecognitionException {
		AsignStatementContext _localctx = new AsignStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_asignStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(ID);
			setState(77);
			match(EQ);
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(78);
				decimal();
				}
				break;
			case 2:
				{
				setState(79);
				match(ID);
				}
				break;
			case 3:
				{
				setState(80);
				match(INT);
				}
				break;
			case 4:
				{
				setState(81);
				string();
				}
				break;
			case 5:
				{
				setState(82);
				bool();
				}
				break;
			case 6:
				{
				setState(83);
				operation();
				}
				break;
			case 7:
				{
				setState(84);
				stringOperation();
				}
				break;
			case 8:
				{
				setState(85);
				infixExpr();
				}
				break;
			}
			setState(88);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(ProgramGrammarParser.LPAREN, 0); }
		public AsignStatementContext asignStatement() {
			return getRuleContext(AsignStatementContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ProgramGrammarParser.RPAREN, 0); }
		public AsignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).enterAsign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).exitAsign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramGrammarVisitor ) return ((ProgramGrammarVisitor<? extends T>)visitor).visitAsign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignContext asign() throws RecognitionException {
		AsignContext _localctx = new AsignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_asign);
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				match(LPAREN);
				setState(91);
				asignStatement();
				setState(92);
				match(RPAREN);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				asignStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputWriteStatementContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public DecimalContext decimal() {
			return getRuleContext(DecimalContext.class,0);
		}
		public TerminalNode ID() { return getToken(ProgramGrammarParser.ID, 0); }
		public TerminalNode INT() { return getToken(ProgramGrammarParser.INT, 0); }
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public StringOperationContext stringOperation() {
			return getRuleContext(StringOperationContext.class,0);
		}
		public AsignStatementContext asignStatement() {
			return getRuleContext(AsignStatementContext.class,0);
		}
		public InputWriteStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputWriteStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).enterInputWriteStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).exitInputWriteStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramGrammarVisitor ) return ((ProgramGrammarVisitor<? extends T>)visitor).visitInputWriteStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputWriteStatementContext inputWriteStatement() throws RecognitionException {
		InputWriteStatementContext _localctx = new InputWriteStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inputWriteStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(97);
				string();
				}
				break;
			case 2:
				{
				setState(98);
				decimal();
				}
				break;
			case 3:
				{
				setState(99);
				match(ID);
				}
				break;
			case 4:
				{
				setState(100);
				match(INT);
				}
				break;
			case 5:
				{
				setState(101);
				bool();
				}
				break;
			case 6:
				{
				setState(102);
				operation();
				}
				break;
			case 7:
				{
				setState(103);
				stringOperation();
				}
				break;
			case 8:
				{
				setState(104);
				asignStatement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputWriteContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(ProgramGrammarParser.LPAREN, 0); }
		public InputWriteStatementContext inputWriteStatement() {
			return getRuleContext(InputWriteStatementContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ProgramGrammarParser.RPAREN, 0); }
		public InputWriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputWrite; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).enterInputWrite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).exitInputWrite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramGrammarVisitor ) return ((ProgramGrammarVisitor<? extends T>)visitor).visitInputWrite(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputWriteContext inputWrite() throws RecognitionException {
		InputWriteContext _localctx = new InputWriteContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_inputWrite);
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(107);
				match(LPAREN);
				setState(108);
				inputWriteStatement();
				setState(109);
				match(RPAREN);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				inputWriteStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WriteContext extends ParserRuleContext {
		public TerminalNode WRITEKEY() { return getToken(ProgramGrammarParser.WRITEKEY, 0); }
		public InputWriteContext inputWrite() {
			return getRuleContext(InputWriteContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ProgramGrammarParser.SEMI, 0); }
		public WriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_write; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).enterWrite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).exitWrite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramGrammarVisitor ) return ((ProgramGrammarVisitor<? extends T>)visitor).visitWrite(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WriteContext write() throws RecognitionException {
		WriteContext _localctx = new WriteContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_write);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(WRITEKEY);
			setState(115);
			inputWrite();
			setState(116);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public AsignContext asign() {
			return getRuleContext(AsignContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramGrammarVisitor ) return ((ProgramGrammarVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WRITEKEY:
				{
				setState(118);
				write();
				}
				break;
			case LPAREN:
			case ID:
				{
				setState(119);
				asign();
				}
				break;
			case IF:
				{
				setState(120);
				condition();
				}
				break;
			case WHILEKEY:
				{
				setState(121);
				mientras();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MientrasContext extends ParserRuleContext {
		public TerminalNode WHILEKEY() { return getToken(ProgramGrammarParser.WHILEKEY, 0); }
		public TerminalNode LCURLY() { return getToken(ProgramGrammarParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(ProgramGrammarParser.RCURLY, 0); }
		public List<BoolContext> bool() {
			return getRuleContexts(BoolContext.class);
		}
		public BoolContext bool(int i) {
			return getRuleContext(BoolContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(ProgramGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ProgramGrammarParser.ID, i);
		}
		public List<TerminalNode> INT() { return getTokens(ProgramGrammarParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(ProgramGrammarParser.INT, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MientrasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mientras; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).enterMientras(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramGrammarListener ) ((ProgramGrammarListener)listener).exitMientras(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramGrammarVisitor ) return ((ProgramGrammarVisitor<? extends T>)visitor).visitMientras(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MientrasContext mientras() throws RecognitionException {
		MientrasContext _localctx = new MientrasContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_mientras);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(WHILEKEY);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 28387049488L) != 0)) {
				{
				setState(128);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(125);
					bool();
					}
					break;
				case 2:
					{
					setState(126);
					match(ID);
					}
					break;
				case 3:
					{
					setState(127);
					match(INT);
					}
					break;
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			match(LCURLY);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 10200547856L) != 0)) {
				{
				{
				setState(134);
				statement();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(140);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
